# titanic_project

./: .gitignore  README.md
Backend/: Dockerfile  backend.py  pyproject.toml  readme.md  render.yaml
Frontend/: next.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.ts
Frontend/api/: index.py
Frontend/src/app/: Form.tsx  FormRadius.tsx  FormSection.tsx  Predict.tsx  Spinner.tsx  globals.css  layout.tsx  page.tsx
Model/: exploratory_analysis.ipynb  model.py  model_1.csv  pyproject.toml
Model/Output/: titanic_voting_classifier.pkl
