[tool.poetry]
package-mode = false
name = "titanic-model"
version = "0.1.0"
description = ""
authors = ["Jordi <jordi.be.1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
catboost = "^1.2.5"
ipykernel = "^6.29.4"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
